--- a/index.css
+++ b/index.css
@@ -19,3 +19,20 @@ body {
 .hidden {
     display: none;
 }
+
+.people_table {
+    height: 600px;
+    overflow-y: scroll;
+}
+
+.person_record_detail {
+    padding-left: 5px;
+}
+
+.person_record_detail_value {
+    padding-left: 5px;
+}
+
+.address_cell {
+    padding-left: 10px;
+}
